@@ -1,5 +1,7 @@
 *SVN*
 
+* Documentation for ConnectionPool.
+
 * Specs for Database.
 
 *0.0.19*
